Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 13.0.0-rc1
-
None
-
-
e52743ae8 (13.0)
Description
tst_memberoperator test fails in test automation.
Test steps:
1. Start Creator(clang enabled)
2. Create a new 'Qt Console Application' project
3. Add '2.' or 'float fl = 2.' to code
Result:
According to the test, suggestions should not be shown, but they are.
Attachments
For Gerrit Dashboard: QTCREATORBUG-30607 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
553842,1 | ClangCodeModel: Do not provide proposal on floats | master | qt-creator/qt-creator | Status: ABANDONED | +1 | 0 |
554868,1 | ClangCodeModel: Do not provide proposal on number literals | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
555085,2 | ClangCodeModel: Fix context processor | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |