ClangCodeModel: Fix context processor

Checking for potential include file completion should only consider
string literals, not number literals.

Fixes: QTCREATORBUG-30607
Change-Id: Ibfb422f1d8be5a5d30489383ecbc359f5ea4a2a9
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>